Created separate Navbars

--- a/src/css/components/global.scss
+++ b/src/css/components/global.scss
@@ -1,24 +1,29 @@
+html {
+  background-image: url(//basehold.it/i/24); // 24px baseline
+}
+
 body {
   @extend .avenir;
 }
 
 section[class*='wrapper']:not(.parallax-wrapper){
-  @include center($max-width: map-get($jeet, 'max-width'), $pad: 10%);
-  background-color: white;
 }
 
 section {
-  padding: $desktop-section-padding 0;
 }
 
 .padding-bottom {
-  padding-bottom: $mobile-section-padding;
 
   @media (min-width: $tablet-width){
-    padding-bottom: $tablet-section-padding;
   }
 
   @media (min-width: $desktop-width){
-    padding-bottom: $desktop-section-padding;
   }
+}
+
+.basehold {
+    background-image: url(//basehold.it/i/24); // 24px baseline
+    background-image: url(//basehold.it/i/24/ff0000); // with Hex colour
+    background-image: url(//basehold.it/i/24/255/0/0); // with RGB colour
+    background-image: url(//basehold.it/i/24/255/0/0/0.85); // with RGBA colour
 }
