--- a/src/css/components/global.scss
+++ b/src/css/components/global.scss
@@ -1,12 +1,10 @@
-html {
-  background-image: url(//basehold.it/i/24); // 24px baseline
-}
-
 body {
   @extend .avenir;
 }
 
-section[class*='wrapper']:not(.parallax-wrapper){
+section[class*='wrapper']:not(.parallax-wrapper):not(.hero-wrapper){
+  background-color: white;
+  padding-top: 12.5rem;
 }
 
 section {
@@ -19,11 +17,4 @@ section {
 
   @media (min-width: $desktop-width){
   }
-}
-
-.basehold {
-    background-image: url(//basehold.it/i/24); // 24px baseline
-    background-image: url(//basehold.it/i/24/ff0000); // with Hex colour
-    background-image: url(//basehold.it/i/24/255/0/0); // with RGB colour
-    background-image: url(//basehold.it/i/24/255/0/0/0.85); // with RGBA colour
 }
