--- a/src/css/components/text-on-image.scss
+++ b/src/css/components/text-on-image.scss
@@ -14,5 +14,18 @@
     margin: 0px;
     color: white;
     text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 36px;
+  }
+
+  h3 {
+    font-size: 21px;
   }
 }
