--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -1,5 +1,34 @@
 .hero-wrapper {
-    height: 85vh;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+
+    .hero-locations{
+      height: 100%;
+      display: flex;
+      position: absolute;
+      top: 0;
+      width: 100%;
+
+      .location-box {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        a {
+          padding: 1rem;
+          font-size: 2rem;
+          text-transform: uppercase;
+          color: white;
+          font-weight: 600;
+        }
+
+        a:hover {
+                  border: 4px white solid;
+        }
+      }
+    }
 }
 
 .services-wrapper, .rates-wrapper {
